<resources>
    <string name="app_name">Hero Path</string>
    <string name="choose_your_hero">Choose your hero!</string>
    <string name="hero_name_hint">Enter your hero name</string>
    <string name="start_adventure">Start the adventure</string>
    <string name="choose_next_step">Choose what to do, Mighty Hero!</string>
    <string name="go_to_town">Walk the city streets</string>
    <string name="go_to_dungeon">Go to creepy dungeon</string>
    <string name="go_to_tavern">Visit tavern</string>
    <string name="save_princess">Save the princess</string>
    <string name="retire">I should retire</string>
    <string name="clothes_in_blood">Your clothes are in blood after battle.</string>
    <string name="have_treasures">You\'re rich hero cause of treasures.</string>
    <string name="hero_drunk">You\'re drunk as hell.</string>
    <string name="hero_princess">Princess is by your side.</string>
    <string name="princess_dead_for_button">Princess is dead</string>
    <string name="princess_is_yours_button">Princess is already yours</string>
    <string name="princess_refused_you_button">Princess refused you</string>
    <string name="treasure_is_yours_button">You already have treasure</string>
    <string name="princess_forbid">Princess forbids you</string>
    <string name="retirement_descreption">You decided to end your hero days and retire. Here is what awaits you.</string>
    <string name="street_descr">You are walking down the central street of Ulugal, capital city of the Aurilia Kingdom.
    Building on both sides of the street are literal architectural wonders. People seem small in comparison, but some women
        looks even more marvelous than millennium old structures. Do you want to walk a little more?
    </string>
    <string name="button_continue">Walk a bit more</string>
    <string name="button_return">Return</string>
    <string name="dungeon_description">Dungeon is truly creepy. You hear moans of terrible creatures up ahead. But you are a Hero, and treasures await.</string>
    <string name="no_corridor">No path in this direction.</string>
    <string name="button_forward">Forward!</string>
    <string name="button_back">Back</string>
    <string name="button_left">Go left</string>
    <string name="button_right">Go right</string>
    <string name="dwarf_monsters">Monsters pity you and leave alive.</string>
    <string name="dwarf_traps">You are too short for spikes to reach you.</string>
    <string name="death">You die!</string>
    <string name="start_again">Start again?</string>
    <string name="tavern_description">It\'s a drinking contest. Push button to drink!</string>
    <string name="tavern_timer">30</string>
    <string name="tavern_drink">Drink!</string>
    <string name="tavern_try_again">Try again</string>
    <string name="tavern_class_dependencies_mage">You\'ve never drunk a pint in your life. What were you thinking?
    There is a spell that can save a man from intoxication, but you\'re too drunk to remember it. You are dead.</string>
    <string name="tavern_loose">You are not fast enough. You loose!</string>
    <string name="tavern_race_dependencies_elf">Elves have many natural talents but resistance to human alcohol is not one of them. You lose.</string>
    <string name="tavern_race_dependencies_dwarf">You\'re dwarf natural in drinking. You still sober enough to see how your opponent falls under the table. You win!</string>
    <string name="tavern_win">You win, the audience applaud you. Today you are proud of yourself. Let\'s not think of tomorrow morning.</string>
    <string name="princess_description">The time has come to save the princess. You enter the tower of evil magister.</string>
    <string-array name="choose_race">
        <item>Human</item>
        <item>Elf</item>
        <item>Dwarf</item>
    </string-array>
    <string-array name="choose_class">
        <item>Warrior</item>
        <item>Wizard</item>
        <item>Thief</item>
    </string-array>
    <string-array name="race_description">
        <item>You\'re simple human, the most common race of Aurilon.</item>
        <item>You\'re Elf, beautiful, wise and cunning.</item>
        <item>You\'re dwarf, short but sturdy. Your homeland is deep underground.</item>
    </string-array>
    <string-array name="class_description">
        <item>People know you as noble warrior, protector of common folks.</item>
        <item>People know you as stubborn wizard, your only friends are dusty books. Sorry.</item>
        <item>People know you as cunning thief, that is the most profitable profession of Aurilon.</item>
    </string-array>
    <string-array name="street_variants">
        <item>You see sophisticated human lady dressed in a long dress with a low neckline.
        You fall in love and try to talk with her.</item>
        <item>You see the Palace of Yawning Prince. Paralyzed by its beauty you did not see
            a sneaky thief. 0 coins in your possession.</item>
        <item>Street gang ahead. The fight seems unavoidable.</item>
        <item>You are a bit tired but the garden ahead is so beautifull, so you walk a bit more.</item>
        <item>The hero is completely tired and want to pee.</item>
    </string-array>
    <string-array name="race_dependencies_lady">
        <item> She kisses you and say goodbye. You will never see her again. </item>
        <item>\"Sorry. Elves are too wild for my taste\".</item>
        <item>\"Meh. Go talk with some ugly dwarf woman, you midget.\"</item>
    </string-array>
    <string-array name="class_dependencies_gang">
        <item>But they are no match for your sword of legends. You leave behind cold bodies,
        severed heads and limbs, blood is all over you.</item>
        <item>But your best friend is fireball. One cast - seven burned bodies, and your clothes are clean.</item>
        <item>But you sneak past them with ease.</item>
    </string-array>
    <string-array name="dungeon_rooms">
        <item>It is starting area.</item>
        <item>The room is full of monsters!</item>
        <item>Suspiciously quiet room.</item>
        <item>It\'s a trap! Awful spikes strikes at you from all sides.</item>
        <item>There is big four-headed albino dog in this room. It stares at you in hunger.</item>
        <item>Massive room with corridors at all sides.</item>
        <item>Lustful succubus waiting to kiss you.</item>
        <item>There is no floor in this room and you fall to lava.</item>
        <item>Treasure. At last.</item>
    </string-array>
    <string-array name="class_dependencies_monsters">
        <item>Whirlwind attack by you sword kills them. You are covered in blood.</item>
        <item>Lighting storm attack makes a day.</item>
        <item>You become invisible.</item>
    </string-array>
    <string-array name="class_dependencies_trap">
        <item>You block spikes by enchanted shield.</item>
        <item>You protect yourself with magic sphere.</item>
        <item>You avoid traps by dancing.</item>
    </string-array>
    <string-array name="race_dependencies_dog">
        <item>Poor creature, you kill it with mercy.</item>
        <item>You charm the creature with elf natural charisma.</item>
        <item>You\'re dwarf. It laughs at you and chokes to death on its own saliva.</item>
    </string-array>
    <string-array name="race_dependencies_succubus">
        <item>Succubus kiss kills you.</item>
        <item>As an elf you resist her kiss. She flee in fear.</item>
        <item>You\'re dwarf. She stares at you a moment and flee in disgust.</item>
    </string-array>
    <string-array name="corridors">
        <item>There is corridor on the left.</item>
        <item>There is corridor on the right.</item>
        <item>There is corridor behind you.</item>
        <item>There is corridor towards you</item>
        <item>There are corridors on the left and on the right.</item>
        <item>There are corridors on the right and towards you.</item>
        <item>There are corridors towards and behind you.</item>
        <item>There are corridors on the left and towards you.</item>
        <item>There are corridors on the left and behind you.</item>
        <item>There are corridors on the right, towards and behind you.</item>
        <item>There are corridors on the left, towards and behind you.</item>
        <item>There are corridors on the right, on the left and towards you.</item>
        <item>There are corridors on the right, on the left and behind you.</item>
        <item>There are corridors on all sides.</item>
        <item>There are corridors on the right and behind you.</item>
    </string-array>
    <string-array name="drink_results">
        <item>You start with cheap wine. It tastes surprisingly good, and you don\'t feel drunk yet.</item>
        <item>Some kind of sugared cocktail. Pussy drinking, easy contest.</item>
        <item>Stakes are higher now. It is rum. Does they think you are some kind of pirate?</item>
        <item>Time is for whisky. Good one, but you feel a little bit dizzy.</item>
        <item>Here comes a brandy. You are sober enough to enjoy its flavour.</item>
        <item>Vodka makes you regret starting the contest. Your opponent is laughing, the crowd is making dirty jokes.</item>
        <item>Another vodka. Year, the author is a pussy not experienced in drinking, or this tavern has very limited stock.</item>
        <item>Beer. At the beginning you welcome it as a relief, oasis in a desert full of intoxicants.
            But when room begins to float you remember what people say about mixing strong and soft drinks.</item>
        <item>You drink something, the tastes eludes you. Reality eludes you.</item>
        <item>The final drink, is it some kind of contest?</item>
    </string-array>
    <string-array name="floor_description">
        <item>First floor is very welcoming. You enter some kind of reception room with comfortable sofas and tables full of sneaks.
        Very tall butler is welcoming you: \"Sir, how may I be of service?\".</item>
        <item>The purpose of the second floor is obvious. It is relaxation zone for the magister and his friends.
        You can see a swimming pool with naked illusionary ladies and sparring zone full of exotic weapons and automatons.</item>
        <item>The Third floor is full of locked rooms, the one with the golden door is especially tempting. You can hear screams from the room
            that is not locked.</item>
        <item>There is library on the left and alchemical laboratory on the right.</item>
        <item>Finally, you enter the bedroom, you see the magister proposing marriage to princess. He is old and ghoulish.
        She is young and beautiful. The princess is hesitating.</item>
    </string-array>
    <string-array name="choices_first_floor">
        <item>You\'re very hungry. Eat sneaks.</item>
        <item>Kill the butler</item>
        <item>Go to the next floor</item>
        <item>Persuade the butler that you\'re the magister\'s business partner</item>
    </string-array>
    <string-array name="results_first_floor">
        <item>The food is poisoned. Bloody magister! You are dying.</item>
        <item>You cut off his head with sword. Blood is all over you.</item>
        <item>You smash his head with staff.</item>
        <item>You impale him with your dagger. Blood is all over you.</item>
        <item>He is already dead. Stop this madness!</item>
        <item>The butler says: \"You cannot go any further"\</item>
        <item>\"It is your life, go on if you want to lose it\"</item>
        <item>You are too drunk to say something clever.</item>
        <item>You\'re in blood, nobody will believe a word.</item>
        <item>You convince him with money from your treasure.</item>
        <item>You were not able to convince him. But it seems he is afraid to actually stop you.</item>
    </string-array>
</resources>