<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dungeon">

    <TextView
        android:id="@+id/textDungeonDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dungeon_description"
        android:layout_margin="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_forward"
        android:onClick="moveForward"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDungeonDescription" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonForward">

        <Button
            android:id="@+id/buttonLeft"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:onClick="moveLeft"
            android:layout_weight="1"
            android:text="@string/button_left" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="moveBack"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/buttonRight"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:onClick="moveRight"
            android:text="@string/button_right" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDungeonResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/buttonDungeonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_return"
        android:onClick="dungeonReturn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCorridors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDungeonResult" />

</androidx.constraintlayout.widget.ConstraintLayout>